vorbisdec: do not try to read past the buffer array

https://bugzilla.gnome.org/show_bug.cgi?id=662108